--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1347,6 +1347,10 @@
     <Compile Include="Migrations\202205230932010_weight-null-in-productmasters.designer.cs">
       <DependentUpon>202205230932010_weight-null-in-productmasters.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202304050647459_palletTYpeIdaddedinpalletng.cs" />
+    <Compile Include="Migrations\202304050647459_palletTYpeIdaddedinpalletng.designer.cs">
+      <DependentUpon>202304050647459_palletTYpeIdaddedinpalletng.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
@@ -2678,6 +2682,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205230932010_weight-null-in-productmasters.resx">
       <DependentUpon>202205230932010_weight-null-in-productmasters.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202304050647459_palletTYpeIdaddedinpalletng.resx">
+      <DependentUpon>202304050647459_palletTYpeIdaddedinpalletng.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
